Fixed overlapping button

--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ hr {
   border: 3px var(--secondary-color) solid;
   color: var(--primary-color);
   background-color: var(--secondary-color);
-  padding: 10px 80px;
+  padding: 10px min(80px, 10vw);
   border-radius: 40px;
 }
 
